--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <div class="toolbar">
@@ -45,6 +45,7 @@
     <!-- В этот список рендери разметку меню -->
     <ul class="menu js-menu"></ul>
 
-    <script src="/src/js/theme.js"></script>
+    <!-- <script src="/src/js/theme.js"></script> -->
+    <script src="./index.js"></script>
   </body>
 </html>
